--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -2,8 +2,8 @@
   background-color: $mainBlue;
   color: #FFF;
   text-decoration: none;
-  padding: .75 1.2rem;
-  displya: inline-block;
+  padding: .75rem 1.2rem;
+  display: inline-block;
 
   &--orange {
     background-color: $mainOrange;
@@ -13,7 +13,8 @@
     padding: 1.1rem 1.9rem;
 
     @mixin atSmall {
-        font-size: 1.25rem;
+      font-size: 1.25rem;
     }
   }
+
 }
