--- a/app/assets/styles/modules/_headline.css
+++ b/app/assets/styles/modules/_headline.css
@@ -4,7 +4,7 @@
   color: $mainBlue;
 
   @mixin atSmall {
-      font-size: 2.86rem;
+    font-size: 2.875rem;
   }
 
   &--centered {
@@ -17,9 +17,8 @@
 
   &--small {
     font-size: 1.2rem;
-
     @mixin atSmall {
-        font-size: 1.756rem;
+      font-size: 1.875rem;
     }
   }
 
@@ -33,6 +32,10 @@
     font-weight: 100;
   }
 
+  strong {
+    font-weight: 400;
+  }
+
   &--b-margin-small {
     margin-bottom: .5em;
   }
@@ -41,8 +44,7 @@
     margin-bottom: 1.6em;
   }
 
-  &--not-margin {
+  &--no-t-margin {
     margin-top: 0;
   }
-
 }
