--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -24,11 +24,11 @@
     @mixin atSmall {
       position: relative;
       top: 8px;
-      margin-right: 1rem;
+      margin-right: .5rem;
       margin-left: 0;
-      margin-right: 0;
       margin-bottom: 0;
       display: inline-block;
     }
   }
+
 }
